# Event_tracking_SDK

./: CMakeLists.txt
include/: buried.h
scripts/: build.py
src/: CMakeLists.txt  buried_core.cc  buried_core.h
src/common/: common_service.cc
src/context/: context.h
src/crypt/: crypt.cc
src/database/: database.cc  database.h
src/report/: buried_report.cc  buried_report.h  http_report.h
